fix(ags): app launcher not showing icons

--- a/ags/src/style/app-launcher.scss
+++ b/ags/src/style/app-launcher.scss
@@ -59,5 +59,8 @@ window#dkm_launcher {
     icon {
       font-size: 30px;
     }
+    .description {
+      color: mix(v.$fg-color, v.$bg-color, 50%);
+    }
   }
 }
